<android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="#fff"
    android:padding="5dp"
    android:layout_gravity="center"
    app:columnCount="5"
    app:orientation="horizontal"
    app:rowCount="5">

    <TextView
        android:id="@+id/input"
        android:layout_width="0dp"
        app:layout_columnSpan="3"
        app:layout_columnWeight="1"
        app:layout_rowSpan="1" />

    <TextView
        android:id="@+id/result"
        android:layout_width="0dp"
        app:layout_columnSpan="2"
        app:layout_columnWeight="1"
        app:layout_rowSpan="1"
        android:text="@string/_0" />

    <Button
        android:layout_width="0dp"
        android:text="@string/_7"
        app:layout_columnSpan="1"
        app:layout_columnWeight="1"
        app:layout_rowSpan="1"
        android:onClick="updateText"/>

    <Button
        android:layout_width="0dp"
        android:text="@string/_8"
        app:layout_columnSpan="1"
        app:layout_columnWeight="1"
        app:layout_rowSpan="1"
        android:onClick="updateText" />

    <Button
        android:layout_width="0dp"
        android:text="@string/_9"
        app:layout_columnSpan="1"
        app:layout_columnWeight="1"
        app:layout_rowSpan="1"
        android:onClick="updateText" />

    <Button
        android:layout_width="0dp"
        android:text="@string/add"
        app:layout_columnSpan="1"
        app:layout_columnWeight="1"
        app:layout_rowSpan="1"
        android:onClick="updateText" />

    <Button
        android:id="@+id/btnequals"
        android:layout_width="0dp"
        android:text="="
        app:layout_columnSpan="1"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_vertical"
        app:layout_rowSpan="4"
        android:onClick="calculate"/>

    <Button
        android:layout_width="0dp"
        android:text="@string/_4"
        app:layout_columnSpan="1"
        app:layout_columnWeight="1"
        app:layout_rowSpan="1"
        android:onClick="updateText"/>

    <Button
        android:layout_width="0dp"
        android:text="@string/_5"
        app:layout_columnSpan="1"
        app:layout_columnWeight="1"
        app:layout_rowSpan="1"
        android:onClick="updateText"/>

    <Button
        android:layout_width="0dp"
        android:text="@string/_6"
        app:layout_columnSpan="1"
        app:layout_columnWeight="1"
        app:layout_rowSpan="1"
        android:onClick="updateText"/>

    <Button
        android:layout_width="0dp"
        android:text="-"
        app:layout_columnSpan="1"
        app:layout_columnWeight="1"
        app:layout_rowSpan="1"
        android:onClick="updateText"/>

    <Button
        android:layout_width="0dp"
        android:text="@string/_1"
        app:layout_columnSpan="1"
        app:layout_columnWeight="1"
        app:layout_rowSpan="1"
        android:onClick="updateText"/>

    <Button
        android:layout_width="0dp"
        android:text="@string/_2"
        app:layout_columnSpan="1"
        app:layout_columnWeight="1"
        app:layout_rowSpan="1"
        android:onClick="updateText"/>

    <Button
        android:layout_width="0dp"
        android:text="@string/_3"
        app:layout_columnSpan="1"
        app:layout_columnWeight="1"
        app:layout_rowSpan="1"
        android:onClick="updateText"/>

    <Button
        android:layout_width="0dp"
        android:text="@string/multiply"
        app:layout_columnSpan="1"
        app:layout_columnWeight="1"
        app:layout_rowSpan="1"
        android:onClick="updateText"/>

    <Button
        android:layout_width="0dp"
        android:text="@string/_0"
        app:layout_columnSpan="2"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_horizontal"
        app:layout_rowSpan="1"
        android:onClick="updateText" />

    <Button
        android:layout_width="0dp"
        android:text="@string/divide"
        app:layout_columnSpan="2"
        app:layout_columnWeight="1"
        app:layout_rowSpan="1"
        android:onClick="updateText" />

</android.support.v7.widget.GridLayout>