<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    android:stretchColumns="1">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow android:padding="5dip">

            <TextView
                android:id="@+id/input"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/result"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_0" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="3">

            <TableLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5">

                <TableRow>

                    <Button
                        android:id="@+id/btn6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="updateText"
                        android:text="@string/_6" />

                    <Button
                        android:id="@+id/btn5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="updateText"
                        android:text="@string/_5" />

                    <Button
                        android:id="@+id/btn4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="updateText"
                        android:text="@string/_4" />

                    <Button
                        android:id="@+id/btnadd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="updateText"
                        android:text="@string/add" />
                </TableRow>

                <TableRow>

                    <Button
                        android:id="@+id/btn3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="updateText"
                        android:text="@string/_3" />

                    <Button
                        android:id="@+id/btn2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="updateText"
                        android:text="@string/_2" />

                    <Button
                        android:id="@+id/btn1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="updateText"
                        android:text="@string/_1" />

                    <Button
                        android:id="@+id/btnmin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="updateText"
                        android:text="@string/substract" />
                </TableRow>


                <TableRow>

                    <Button
                        android:id="@+id/btn7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="updateText"
                        android:text="@string/_9" />

                    <Button
                        android:id="@+id/btn8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="updateText"
                        android:text="@string/_8" />

                    <Button
                        android:id="@+id/btn9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="updateText"
                        android:text="@string/_7" />

                    <Button
                        android:id="@+id/btntimes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="updateText"
                        android:text="@string/multiply" />
                </TableRow>

                <TableRow>

                    <Button
                        android:id="@+id/bnt0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="updateText"
                        android:text="@string/_0" />

                    <Button
                        android:id="@+id/btndiv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="updateText"
                        android:text="@string/divide" />
                </TableRow>

            </TableLayout>

            <!--<TextView-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="1.5"-->
            <!--android:text="@string/equal"-->
            <!--android:background="@android:color/holo_purple"-->
            <!--android:gravity="center"/>-->
            <Button
                android:id="@+id/btnequals"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:onClick="calculate"
                android:text="@string/equal" />

        </TableRow>

    </TableLayout>


</TableLayout>